# Iridium

./: .gitignore  Cargo.toml  README.md  dark.css  install.sh
Documentation/: .iridium  introduction.md  quickstart.md
src/: main.rs  non_md.rs  parser.rs
