[package]
name = "iridium"
version = "0.1.0"
authors = ["fatalcenturion <tom.b.2k2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comrak = "0.8.2"
clap = "2.33.3"
regex = "1.4.1"
scraper = "0.12.0"
wkhtmltopdf = "0.3.0"